@@ -1,7 +1,7 @@
 package com.unisul.basic_inventory_api.service;
 
 import com.unisul.basic_inventory_api.model.Category;
-import com.unisul.basic_inventory_api.model.CategoryDTO;
+import com.unisul.basic_inventory_api.model.CategoryListDTO;
 import com.unisul.basic_inventory_api.repository.CategoryRepository;
 import jakarta.persistence.Tuple;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,34 +18,36 @@ public class CategoryService {
     private final CategoryRepository categoryRepository;
 
     @Autowired
-    public CategoryService(CategoryRepository categoryRepository) {this.categoryRepository = categoryRepository;}
+    public CategoryService(CategoryRepository categoryRepository) {
+        this.categoryRepository = categoryRepository;
+    }
 
-    // Metodo para listar categorias com paginação e busca
-    public CategoryDTO getPaginatedCategories(int page, int rowsPerPage, String search, String sortField, String sortDirection) {
+    // Método para listar categorias com paginação e busca
+    public CategoryListDTO getPaginatedCategories(int page, int rowsPerPage, String search, String sortField, String sortDirection) {
         PageRequest pageable = PageRequest.of(page - 1, rowsPerPage, Sort.by(Sort.Direction.fromString(sortDirection), sortField)); // PageRequest é 0-indexed
         List<Tuple> results = categoryRepository.findCategoriesAndCount(search, pageable);
 
         List<Category> categories = results.stream()
-            .map(tuple -> tuple.get(0, Category.class))
-            .toList();
+                .map(tuple -> tuple.get(0, Category.class))
+                .toList();
 
-        long totalItems = results.isEmpty() ? 0 : results.getFirst().get(1, Long.class);
+        long totalItems = results.isEmpty() ? 0 : results.get(0).get(1, Long.class);
 
-        return new CategoryDTO(categories, totalItems);
+        return new CategoryListDTO(categories, totalItems);
     }
 
-    // Metodo para salvar uma nova categoria
+    // Método para salvar uma nova categoria
     @Transactional
     public Category saveCategory(Category category) {
         return categoryRepository.save(category);
     }
 
-    // Metodo para obter uma categoria específica
+    // Método para obter uma categoria específica
     public Optional<Category> getCategoryById(int id) {
         return categoryRepository.findById(id);
     }
 
-    // Metodo para atualizar uma categoria
+    // Método para atualizar uma categoria
     @Transactional
     public Optional<Category> updateCategory(int id, Category category) {
         if (!categoryRepository.existsById(id)) {
@@ -55,21 +57,20 @@ public class CategoryService {
         return Optional.of(categoryRepository.save(category));
     }
 
-    // Metodo para deletar uma categoria (exclusão lógica)
+    // Método para deletar uma categoria (exclusão lógica)
+    @Transactional
     public boolean setCategoryDeleted(int id) {
-        Optional<Category> categoryOptional = categoryRepository.findById(id);
-        if (categoryOptional.isPresent()) {
-            Category category = categoryOptional.get();
-            category.setDeleted(true); // Marca a categoria como deletada
-            categoryRepository.save(category); // Salva a categoria atualizada
-            return true; // Retorna true se a operação for bem-sucedida
-        }
-        return false; // Retorna false se a categoria não existir
+        return categoryRepository.findById(id)
+                .map(category -> {
+                    category.setDeleted(true); // Marca a categoria como deletada
+                    categoryRepository.save(category); // Salva a categoria atualizada
+                    return true; // Retorna true se a operação for bem-sucedida
+                })
+                .orElse(false); // Retorna false se a categoria não existir
     }
 
-    // Metodo para verificar se uma categoria já existe
+    // Método para verificar se uma categoria já existe
     public boolean categoryExists(String name) {
         return categoryRepository.findByName(name).isPresent();
     }
-
 }
